NTI-6269 - fix height on mobile

--- a/src/services/goto-webinar/registration/InProgress.scss
+++ b/src/services/goto-webinar/registration/InProgress.scss
@@ -7,6 +7,13 @@
 	overflow: hidden;
 	position: relative;
 
+	@include responsive-range(mobile) {
+		height: 100vh;
+		max-height: calc(100vh - 50px);
+		padding-top: 50px;
+		overflow: scroll;
+	}
+
 	p {
 		color: $secondary-grey;
 		font-family: $body-font-family;
@@ -21,5 +28,11 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		text-align: center;
+
+		@include responsive-range(mobile) {
+			position: relative;
+			top: 0;
+			transform: translate(-50%, 0%);
+		}
 	}
 }
